# youtubedld

./: .gitlab-ci.yml  CMakeLists.txt  README.md
cmake/: CompileOptions.cmake  Custom.cmake  Findgstreamermm.cmake
doc/: youtube.json
src/: ActivePlaylist.cpp  ActivePlaylist.hpp  CMakeLists.txt  Config.cpp  Config.hpp  Playlist.cpp  Playlist.hpp  Server.cpp  Server.hpp  main.cpp
src/Outputs/: Base.hpp  Dummy.hpp
src/Protocols/: Base.hpp  MPD.cpp  MPD.hpp
src/Protocols/Base/: Event.hpp
src/Protocols/MPD/: Acks.cpp  Acks.hpp  Commands.cpp  Commands.hpp
src/Util/: EpollServer.cpp  EpollServer.hpp  GObjectSignalWrapper.hpp  Logging.cpp  Logging.hpp  Path.cpp  Path.hpp  Tokeniser.hpp  WorkQueue.cpp  WorkQueue.hpp  YoutubeDL.cpp  YoutubeDL.hpp
